# curig

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
example_configs/: conf.json  conf.yaml
example_configs/schema/: example-schema.json
src/curig/: __init__.py  config.py  dict.py  load.py  url.py  util.py
test/: test_config.py  test_dict.py  test_url.py  test_util.py
